--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,13 @@
     <string name="Test">Test</string>
     <string name="title_activity_test">Test</string>
     <string name="title_activity_tab">TabActivity</string>
-    <string name="tab_text_1"></string>
-    <string name="tab_text_2"></string>
-    <string name="tab_text_3"></string>
+    <string name="newEventTabText"></string>
+    <string name="calendarTabText"></string>
+    <string name="settingTabText"></string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="setting">Setting</string>
+    <string name="newEvent">newEvent</string>
+    <string name="calendar">calendar</string>
 
 </resources>
