--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Horario</string>
+
+
+
+
+    <string name="CreateAppointment_Dropdown_repetition_yearly">jährlich</string>
+    <string name="CreateAppointment_Dropdown_repetition_monthly">monatlich</string>
+    <string name="CreateAppointment_Dropdown_repetition_weekly">wöchentlich</string>
+    <string name="CreateAppointment_Dropdown_repetition_daily">täglich</string>
 </resources>
