--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,13 @@
     <string name="setting">Setting</string>
     <string name="newEvent">newEvent</string>
     <string name="calendar">calendar</string>
+    <string name="settings_text">Einstellungen</string>
+    <string name="support_text">Support</string>
+    <string name="copyright_text">Impressum</string>
+    <string name="feedback_zur_app_text">Feedback zur App</string>
+    <string name="username_text">Benutzername :</string>
+    <string name="allowpush_text">Push Nachrichten erlauben :</string>
+    <string name="reminder_text">Erinnerungen</string>
+    <string name="minutesBefore_text">Minuten vorher</string>
 
 </resources>
