US010_QRCode_Scannen_und_Auslesen: gescannte QR-Codes werden in eine Datenbanktablle geschrieben (Random-Werte). Gesamter Inhalt der DB kann in einer Message aufgeführt werden.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,8 @@
     <string name="tab_text_3">Tab 3</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="button_name_scan">SCAN</string>
+    <string name="button_show_data">showData</string>
+    <string name="title_activity_scan">QRCode Scanner</string>
 
 </resources>
