--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,13 @@
 <resources>
     <string name="app_name">Horario</string>
+
+
+
+
+    <string name="CreateAppointment_Dropdown_repetition_yearly">jährlich</string>
+    <string name="CreateAppointment_Dropdown_repetition_monthly">monatlich</string>
+    <string name="CreateAppointment_Dropdown_repetition_weekly">wöchentlich</string>
+    <string name="CreateAppointment_Dropdown_repetition_daily">täglich</string>
     <string name="Test">Test</string>
     <string name="title_activity_test">Test</string>
     <string name="title_activity_tab">TabActivity</string>
