- US005: added onResum() to load the text from the DB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="allowpush_text">Push Nachrichten erlauben :</string>
     <string name="reminder_text">Erinnerungen :</string>
     <string name="minutesBefore_text">Minuten vorher</string>
+    <string name="noValidUsername">Benutzername darf nicht mit Leerzeichen anfangen!</string>
 </resources>
