--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,5 @@
 <resources>
     <string name="app_name">Horario</string>
-
-
-
-
     <string name="CreateAppointment_Dropdown_repetition_yearly">jährlich</string>
     <string name="CreateAppointment_Dropdown_repetition_monthly">monatlich</string>
     <string name="CreateAppointment_Dropdown_repetition_weekly">wöchentlich</string>
@@ -29,4 +25,8 @@
     <string name="reminder_text">Erinnerungen :</string>
     <string name="minutesBefore_text">Minuten vorher</string>
     <string name="noValidUsername">Benutzername darf nicht mit Leerzeichen anfangen!</string>
+    <string name="titleDialogUsername">Bitte vergeben Sie einen Benutzernamen :)</string>
+    <string name="save_text">speichern</string>
+    <string name="later_text">Später</string>
+    <string name="UserIsNull">Bitte geben Sie einen gültigen Benutzernamen ein!</string>
 </resources>
