--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
     <string name="app_name">Horario</string>
 
 
-
-
     <string name="CreateAppointment_Dropdown_repetition_yearly">jährlich</string>
     <string name="CreateAppointment_Dropdown_repetition_monthly">monatlich</string>
     <string name="CreateAppointment_Dropdown_repetition_weekly">wöchentlich</string>
@@ -33,4 +31,7 @@
     <string name="reminder_text">Erinnerungen :</string>
     <string name="minutesBefore_text">Minuten vorher</string>
     <string name="noValidUsername">Benutzername darf nicht mit Leerzeichen anfangen!</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
