US013: Basic send SMS ready. Errormessage will be display but not handled

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,9 @@
     <string name="save_text">speichern</string>
     <string name="later_text">Später</string>
     <string name="thanksForUsername">Benutzername wurde gespeichert! </string>
+    <string name="sms_sent">SMS wurde versandt!</string>
+    <string name="generic_failure">Generic Failure</string>
+    <string name="noService">No Service!</string>
+    <string name="nullPdu">SMS send Failed because no pdu provided!</string>
+    <string name="radioOff">Radio Off</string>
 </resources>
