--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,5 @@
 <resources>
     <string name="app_name">Horario</string>
-    <string name="event_repetition">Wiederholungshäufigkeit</string>
-
     <string name="CreateAppointment_Dropdown_repetition_yearly">jährlich</string>
     <string name="CreateAppointment_Dropdown_repetition_monthly">monatlich</string>
     <string name="CreateAppointment_Dropdown_repetition_weekly">wöchentlich</string>
@@ -44,14 +42,14 @@
     <string name="event_endOfRepetition">wiederholen bis</string>
     <string name="event_save">Termin speichern</string>
     <string name="event_room">Raum</string>
+    <string name="r_ckmeldungen_anzeigen">Rückmeldungen anzeigen</string>
+    <string name="qr_code_anzeigen">QR Code anzeigen</string>
+    <string name="headline">Headline</string>
     <string-array name="event_repetitions">
         <item name="event_repetition_yearly">jährlich</item>
         <item name="event_repetition_monthly">monatlich</item>
         <item name="event_repetition_weekly">wöchentlich</item>
         <item name="event_repetition_daily">täglich</item>
     </string-array>
-    <string name="titleDialogUsername">Bitte vergeben Sie einen Benutzernamen :)</string>
-    <string name="save_text">speichern</string>
-    <string name="later_text">Später</string>
-    <string name="thanksForUsername">Benutzername wurde gespeichert! </string>
+
 </resources>
