--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,11 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="description_too_long">Die Beschreibung darf nicht länger als 500 Zeichen sein.</string>
     <string name="shortTitle_too_long">Der Kurztitel darf nicht länger als 100 Zeichen sein.</string>
+    <string name="startTime_past">Der Termin darf nicht in der Vergangenheit beginnen</string>
+    <string name="shortTitle_spaces">Der Kurztitel darf nicht mit Leerzeichen beginnen</string>
+    <string name="description_spaces">Die beschreibung darf nicht mit Leerzeichen beginnen</string>
+    <string name="place_spaces">Der Raum darf nicht mit Leerzeichen beginnen</string>
+    <string name="room_too_long">Der Raum darf nicht länger als 100 zeichen sein</string>
 
     <string-array name="push_times">
         <item name="push_time_0">0</item>
