--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,9 +12,6 @@
     <string name="calendarTabText">Tab_2</string>
     <string name="settingTabText">Tab_3</string>
     <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
-    <string name="button_name_scan">SCAN</string>
-    <string name="button_show_data">showData</string>
     <string name="title_activity_scan">QRCode Scanner</string>
 
     <string name="setting">Setting</string>
@@ -42,18 +39,16 @@
     <string name="event_endOfRepetition">wiederholen bis</string>
     <string name="event_save">Termin speichern</string>
     <string name="event_room">Raum</string>
-    <string name="r_ckmeldungen_anzeigen">Rückmeldungen anzeigen</string>
+    <string name="rueckmeldungen_anzeigen">Rückmeldungen anzeigen</string>
     <string name="qr_code_anzeigen">QR Code anzeigen</string>
     <string name="headline">Headline</string>
     <string name="teilen_via">Teilen via...</string>
+    <string name="in_kalender_anzeigen">In Kalender anzeigen</string>
     <string-array name="event_repetitions">
         <item name="event_repetition_yearly">jährlich</item>
         <item name="event_repetition_monthly">monatlich</item>
         <item name="event_repetition_weekly">wöchentlich</item>
         <item name="event_repetition_daily">täglich</item>
     </string-array>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
