--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="shortTitle_spaces">Der Kurztitel darf nicht mit Leerzeichen beginnen</string>
     <string name="description_spaces">Die beschreibung darf nicht mit Leerzeichen beginnen</string>
     <string name="place_spaces">Der Raum darf nicht mit Leerzeichen beginnen</string>
-    <string name="room_too_long">Der Raum darf nicht länger als 100 zeichen sein</string>
+    <string name="room_too_long">Der Raum darf nicht länger als 100 Zeichen sein</string>
 
     <string-array name="push_times">
         <item name="push_time_0">0</item>
