--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,9 @@
     <string name="thanksForUsername">Benutzername wurde gespeichert! </string>
     <string name="titleParticipantsEvent">Rückmeldungen</string>
     <string name="notificationParticipantsBeingFetched">SMS werden ausgelesen...</string>
+    <string name="noNewTextMessages">Keine (neuen) Nachrichten gefunden</string>
+    <string name="newTextMessagesPt1">Es wurde(n) </string>
+    <string name="newTextMessagesPt2"> neue Nachricht(en) gefunden</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
