NEEDS TO BE MERGED

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
 
     <string name="endOfRepetition_before_endTime">Das Enddatum der Wiederholung darf nicht vor der Endzeit liegen.</string>
     <string name="event_saving_successful">Der Termin wurde erfolgreich gespeichert. Was möchten Sie nun tun?</string>
-<string name="savingSuccessful_new">neuen Termin erstellen</string>
+    <string name="savingSuccessful_new">neuen Termin erstellen</string>
     <string name="savingSuccessful_qrcode">QRCode anzeigen</string>
 
     <string name="titleDialogUsername">Bitte vergeben Sie einen Benutzernamen :)</string>
@@ -62,6 +62,14 @@
     <string name="textMessagesUpdated">Teilnehmerlisten wurden aktualisiert</string>
     <string name="noNewTextMessages">Keine neuen Nachrichten gefunden</string>
     <string name="noTextMessagesAvailable">Keine Nachricht gefunden</string>
+    <string name="appointmentIsFrom">Termin von </string>
+    <string name="yourAppointment">Dein Termin </string>
+    <string name="refuseAppointment">Termin ablehnen</string>
+    <string name="acceptAppointment">Termin annehmen</string>
+    <string name="begForAcceptanceReadSMSAndContacts">Bitte erlaube Horario den Zugriff, um Teilnehmer zu sehen</string>
+    <string name="okayIWillAccept">Nochmal fragen</string>
+
+
 
 
     <!-- TODO: Remove or change this placeholder text -->
@@ -77,7 +85,7 @@
     <string name="room_peek">Das Feld Raum darf nicht das Zeichen | enthalten.</string>
     <string name="pushEnabled">Die Push-Nachrichten wurden eingeschaltet.</string>
     <string name="pushDisabled">Die Push-Nachrichten wurden ausgeschaltet.</string>
-    <string formatted="true" name="pushMinutesSet">Die Push-Nachrichten erscheinen nun %1$d Minuten vor Ihrem Termin.</string>
+    <string name="pushMinutesSet" formatted="true">Die Push-Nachrichten erscheinen nun %1$d Minuten vor Ihrem Termin.</string>
 
     <string-array name="push_times">
         <item name="push_time_0">0</item>
@@ -88,4 +96,7 @@
         <item name="push_time_90">90</item>
         <item name="push_time_120">120</item>
     </string-array>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
