--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="lastTry_phoneNumber">Ohne deine Telefonnummer können wir deinen Nutzernamen nicht speichern.</string>
     <string name="oneMoreTime">Nochmal</string>
     <string name="telephonenumerNotRead">Die Telefonnummer konnte nicht ausgelesen werden. Bitte geben Sie Ihre Telefonnummer manuell ein.</string>
-    <string name="wrongNumberFormat">Die Telefonummer muss mit einem + oder einer 0 beginnen.</string>
+    <string name="wrongNumberFormat">Die Telefonummer darf nur aus Zahlen und ggf. einem + am Anfang bestehen.</string>
     <string name="UsernameNotSaved">Der Benutzername wurde nicht gespeichert.</string>
 
     <string-array name="push_times">
@@ -113,7 +113,7 @@
     <string name="phoneNumber">Telefonnummer</string>
     <string name="phoneNumberHint">Telefonnummer</string>
     <string name="PhoneNumberCouldNotBeenRead">Die Telefonnummer konnte nicht ausgelesen werden. Bitte tragen Sie die Telefonnummer manuell ein.</string>
-    <string name="phoneNumberSaved">Die telefonnummer wurde gespeichert</string>
+    <string name="phoneNumberSaved">Die Telefonnummer wurde gespeichert</string>
     <string name="wrongQRCodeResult">Das ist der Inhalt vom QR Code:\u0020</string>
     <string name="notAsEventSaveable">Das können wir leider nicht als Termin speichern!</string>
     <string name="in_kalender_anzeigen">In Kalender anzeigen</string>
